--- a/src/Microsoft.AspNet.SignalR.Server/project.json
+++ b/src/Microsoft.AspNet.SignalR.Server/project.json
@@ -41,7 +41,7 @@
                 "System.Resources.ResourceManager": "4.0.0-beta-*",
                 "System.Runtime": "4.0.20-beta-*",
                 "System.Runtime.Extensions": "4.0.10-beta-*",
-                "System.Security.Claims": "1.0.0-*",
+                "System.Security.Claims": "4.0.0-beta-*",
                 "System.Security.Cryptography.RandomNumberGenerator": "4.0.0-beta-*",
                 "System.Security.Principal": "4.0.0-beta-*",
                 "System.Text.Encoding": "4.0.10-beta-*",
