--- a/samples/SignalRSample.Web/project.json
+++ b/samples/SignalRSample.Web/project.json
@@ -1,16 +1,17 @@
 {
+    "webroot": ".",
     "dependencies": {
         "Microsoft.AspNet.Server.IIS": "1.0.0-*",
-        "Microsoft.AspNet.RequestContainer":  "1.0.0-*",
+        "Microsoft.AspNet.RequestContainer": "1.0.0-*",
         "Microsoft.AspNet.Server.WebListener": "1.0.0-*",
-        "Microsoft.AspNet.StaticFiles" : "1.0.0-*",
+        "Microsoft.AspNet.StaticFiles": "1.0.0-*",
         "Microsoft.AspNet.SignalR.Server": "3.0.0-*"
     },
     "commands": {
         "web": "Microsoft.AspNet.Hosting server=Microsoft.AspNet.Server.WebListener server.urls=http://localhost:5002"
     },
-    "frameworks":  {
-        "aspnet50": {},
-        "aspnetcore50": {}
+    "frameworks": {
+        "aspnet50": { },
+        "aspnetcore50": { }
     }
 }
