--- a/samples/SignalRSample.Web/project.json
+++ b/samples/SignalRSample.Web/project.json
@@ -5,13 +5,18 @@
         "Microsoft.AspNet.RequestContainer": "1.0.0-*",
         "Microsoft.AspNet.Server.WebListener": "1.0.0-*",
         "Microsoft.AspNet.StaticFiles": "1.0.0-*",
-        "Microsoft.AspNet.SignalR.Server": "3.0.0-*"
+        "Microsoft.AspNet.SignalR.Server": "3.0.0-*",
+        "Serilog": "1.4.113.0"
     },
     "commands": {
         "web": "Microsoft.AspNet.Hosting server=Microsoft.AspNet.Server.WebListener server.urls=http://localhost:5002"
     },
     "frameworks": {
-        "aspnet50": { },
+        "aspnet50": {
+            "dependencies": {
+                "Microsoft.Framework.Logging.Serilog": "1.0.0-*"
+            }
+        },
         "aspnetcore50": { }
     }
 }
