--- a/src/Microsoft.AspNet.SignalR.Server/project.json
+++ b/src/Microsoft.AspNet.SignalR.Server/project.json
@@ -2,7 +2,7 @@
     "version": "3.0.0-*",
     "description": "Core server components for ASP.NET SignalR.",
     "dependencies": {
-        "Microsoft.AspNet.HttpFeature": { "version": "1.0.0-*", "type": "build" },
+        "Microsoft.AspNet.Http.Interfaces": { "version": "1.0.0-*", "type": "build" },
         "Microsoft.AspNet.RequestContainer": "1.0.0-*",
         "Microsoft.AspNet.Security.DataProtection": "1.0.0-*",
         "Microsoft.Framework.Logging": "1.0.0-*",
