Removed build time dep

--- a/src/Microsoft.AspNet.SignalR.Server/project.json
+++ b/src/Microsoft.AspNet.SignalR.Server/project.json
@@ -2,11 +2,11 @@
     "version": "3.0.0-*",
     "description": "Core server components for ASP.NET SignalR.",
     "dependencies": {
-        "Microsoft.AspNet.Http.Interfaces": { "version": "1.0.0-*", "type": "build" },
+        "Microsoft.AspNet.Http.Interfaces": "1.0.0-*",
         "Microsoft.AspNet.RequestContainer": "1.0.0-*",
         "Microsoft.AspNet.Security.DataProtection": "1.0.0-*",
         "Microsoft.Framework.Logging": "1.0.0-*",
-        "Microsoft.Framework.Runtime.Interfaces": { "version": "1.0.0-*", "type": "build" },
+        "Microsoft.Framework.Runtime.Interfaces": "1.0.0-*",
         "Newtonsoft.Json": "6.0.6"
     },
     "compilationOptions": {
